loading existing values into the form fields when page starts

--- a/graphics/index.html
+++ b/graphics/index.html
@@ -7,11 +7,11 @@
 <body>
   <div class="" id="playerContainer">
     <div id="leftPlayerBox" class="playerBox">
-      <div id="leftScore"></div>
+      <div id="leftScore" class="score"></div>
       <div id="leftName"><span id="leftPlayerName"></span>&nbsp;<span id="leftCharacters"></span></div>
     </div>
     <div id="rightPlayerBox" class="playerBox">
-      <div id="rightScore"></div>
+      <div id="rightScore" class="score"></div>
       <div id="rightName"><span id="rightPlayerName"></span>&nbsp;<span id="rightCharacters"></span></div>
     </div>
   </div>
